--- a/tests/integration/targets/instance/tasks/present.yml
+++ b/tests/integration/targets/instance/tasks/present.yml
@@ -49,6 +49,9 @@
       - result is changed
       - result.vultr_instance.plan == instance.plan
       - result.vultr_instance.region == instance.region
+      - "result.vultr_instance.backups == '{{ 'enabled' if instance.backups else 'disabled' }}'"
+      - result.vultr_instance.ddos_protection == instance.ddos_protection
+      - result.vultr_instance.enable_ipv6 == instance.enable_ipv6
 
 - name: test create instance idempotence
   vultr.cloud.instance:
@@ -73,6 +76,9 @@
       - result is not changed
       - result.vultr_instance.plan == instance.plan
       - result.vultr_instance.region == instance.region
+      - "result.vultr_instance.backups == '{{ 'enabled' if instance.backups else 'disabled' }}'"
+      - result.vultr_instance.ddos_protection == instance.ddos_protection
+      - result.vultr_instance.enable_ipv6 == instance.enable_ipv6
 
 - name: test update instance in check mode
   vultr.cloud.instance:
@@ -98,6 +104,9 @@
       - result is changed
       - result.vultr_instance.plan == instance.plan
       - result.vultr_instance.region == instance.region
+      - "result.vultr_instance.backups == '{{ 'enabled' if instance.backups else 'disabled' }}'"
+      - result.vultr_instance.ddos_protection == instance.ddos_protection
+      - result.vultr_instance.enable_ipv6 == instance.enable_ipv6
 
 - name: test update instance
   vultr.cloud.instance:
@@ -122,6 +131,9 @@
       - result is changed
       - result.vultr_instance.plan == instance.plan_update
       - result.vultr_instance.region == instance.region
+      - "result.vultr_instance.backups == '{{ 'enabled' if instance.backups_update else 'disabled' }}'"
+      - result.vultr_instance.ddos_protection == instance.ddos_protection_update
+      - result.vultr_instance.enable_ipv6 == instance.enable_ipv6_update
 
 - name: test update instance idempotence
   vultr.cloud.instance:
@@ -146,3 +158,6 @@
       - result is not changed
       - result.vultr_instance.plan == instance.plan_update
       - result.vultr_instance.region == instance.region
+      - "result.vultr_instance.backups == '{{ 'enabled' if instance.backups_update else 'disabled' }}'"
+      - result.vultr_instance.ddos_protection == instance.ddos_protection_update
+      - result.vultr_instance.enable_ipv6 == instance.enable_ipv6_update
