--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -110,3 +110,10 @@ releases:
     - block_type_block_storage.yml
     - dns_record_prio.yml
     release_date: '2022-10-14'
+  1.3.0:
+    changes:
+      bugfixes:
+      - instance - Fixed the handling for activating/deactivating backups.
+    fragments:
+    - instance-feature-handling.yml
+    release_date: '2022-10-28'
