Rebase and update unit test workflow

--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -17,7 +17,7 @@ jobs:
   unit-test:
     name: Unit test Ansible ${{ matrix.ansible }} Py${{ matrix.python }}
     if: ${{ github.event.label.name == 'automation' || github.ref_name == 'main' }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     defaults:
       run:
         working-directory: ansible_collections/vultr/cloud
@@ -25,12 +25,9 @@ jobs:
       fail-fast: false
       matrix:
         ansible:
-          - stable-2.11
-          - stable-2.13
+          - stable-2.14
         python:
-          - 2.7
-          - 3.6
-          - 3.8
+          - "3.10"
     steps:
       - name: Check out code
         uses: actions/checkout@v3
