--- a/tests/integration/targets/instance/tasks/main.yml
+++ b/tests/integration/targets/instance/tasks/main.yml
@@ -11,3 +11,6 @@
     - ansible.builtin.import_role:
         name: cleanup
         tasks_from: cleanup_ssh_key
+    - ansible.builtin.import_role:
+        name: cleanup
+        tasks_from: cleanup_vpc
