--- a/tests/integration/targets/instance/tasks/present.yml
+++ b/tests/integration/targets/instance/tasks/present.yml
@@ -44,7 +44,6 @@
     app: "{{ instance.app | default(omit) }}"
     image: "{{ instance.image | default(omit) }}"
     vpcs: "{{ instance.vpcs | default(omit) }}"
-
   register: result
 - name: verify test create instance
   ansible.builtin.assert:
@@ -55,6 +54,9 @@
       - "result.vultr_instance.backups == '{{ 'enabled' if instance.backups else 'disabled' }}'"
       - result.vultr_instance.ddos_protection == instance.ddos_protection
       - result.vultr_instance.enable_ipv6 == instance.enable_ipv6
+      - result.vultr_instance.vpcs | selectattr('description','equalto','{{ vultr_resource_prefix }}_instance_vpc_1') | list | count == 1
+      - result.vultr_instance.vpcs | selectattr('description','equalto','{{ vultr_resource_prefix }}_instance_vpc_2') | list | count == 1
+      - result.vultr_instance.vpcs | list | count == 2
 
 - name: test create instance idempotence
   vultr.cloud.instance:
@@ -83,6 +85,9 @@
       - "result.vultr_instance.backups == '{{ 'enabled' if instance.backups else 'disabled' }}'"
       - result.vultr_instance.ddos_protection == instance.ddos_protection
       - result.vultr_instance.enable_ipv6 == instance.enable_ipv6
+      - result.vultr_instance.vpcs | selectattr('description','equalto','{{ vultr_resource_prefix }}_instance_vpc_1') | list | count == 1
+      - result.vultr_instance.vpcs | selectattr('description','equalto','{{ vultr_resource_prefix }}_instance_vpc_2') | list | count == 1
+      - result.vultr_instance.vpcs | list | count == 2
 
 - name: test update instance in check mode
   vultr.cloud.instance:
@@ -112,6 +117,9 @@
       - "result.vultr_instance.backups == '{{ 'enabled' if instance.backups else 'disabled' }}'"
       - result.vultr_instance.ddos_protection == instance.ddos_protection
       - result.vultr_instance.enable_ipv6 == instance.enable_ipv6
+      - result.vultr_instance.vpcs | selectattr('description','equalto','{{ vultr_resource_prefix }}_instance_vpc_1') | list | count == 1
+      - result.vultr_instance.vpcs | selectattr('description','equalto','{{ vultr_resource_prefix }}_instance_vpc_2') | list | count == 1
+      - result.vultr_instance.vpcs | list | count == 2
 
 - name: test update instance
   vultr.cloud.instance:
@@ -140,6 +148,9 @@
       - "result.vultr_instance.backups == '{{ 'enabled' if instance.backups_update else 'disabled' }}'"
       - result.vultr_instance.ddos_protection == instance.ddos_protection_update
       - result.vultr_instance.enable_ipv6 == instance.enable_ipv6_update
+      - result.vultr_instance.vpcs | selectattr('description','equalto','{{ vultr_resource_prefix }}_instance_vpc_1') | list | count == 1
+      - result.vultr_instance.vpcs | selectattr('description','equalto','{{ vultr_resource_prefix }}_instance_vpc_3') | list | count == 1
+      - result.vultr_instance.vpcs | list | count == 2
 
 - name: test update instance idempotence
   vultr.cloud.instance:
@@ -168,3 +179,6 @@
       - "result.vultr_instance.backups == '{{ 'enabled' if instance.backups_update else 'disabled' }}'"
       - result.vultr_instance.ddos_protection == instance.ddos_protection_update
       - result.vultr_instance.enable_ipv6 == instance.enable_ipv6_update
+      - result.vultr_instance.vpcs | selectattr('description','equalto','{{ vultr_resource_prefix }}_instance_vpc_1') | list | count == 1
+      - result.vultr_instance.vpcs | selectattr('description','equalto','{{ vultr_resource_prefix }}_instance_vpc_3') | list | count == 1
+      - result.vultr_instance.vpcs | list | count == 2
