--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -13,6 +13,7 @@ action_groups:
     - firewall_rule
     - firewall_rule_info
     - instance
+    - instance_info
     - os_info
     - plan_info
     - plan_metal_info
