--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -177,3 +177,12 @@ releases:
       name: snapshot_info
       namespace: ''
     release_date: '2023-01-22'
+  1.7.1:
+    changes:
+      bugfixes:
+      - instance - Fixed an issue when deleting an instance in locked state. (https://github.com/vultr/ansible-collection-vultr/pull/68)
+      - inventory - Fixed the issue instance tags were not returned (https://github.com/vultr/ansible-collection-vultr/issues/69)
+    fragments:
+    - 68-instance-locked-absent.yml
+    - 70-inventory-fix-tags-not-returned.yml
+    release_date: '2023-05-03'
