--- a/tests/integration/targets/bare_metal/tasks/tests.yml
+++ b/tests/integration/targets/bare_metal/tasks/tests.yml
@@ -17,13 +17,13 @@
     name: "{{ vultr_bare_metal_ssh_key_name }}"
     ssh_key: "{{ vultr_bare_metal_ssh_key }}"
 
-# - name: setup vpcs
-#   vultr.cloud.vpc:
-#     description: "{{ item.description }}"
-#     v4_subnet: "{{ item.v4_subnet }}"
-#     v4_subnet_mask: "{{ item.v4_subnet_mask }}"
-#     region: "{{ item.region }}"
-#   with_items: "{{ vutr_bare_metal_vpcs }}"
+- name: setup vpc2s
+  vultr.cloud.vpc2:
+    description: "{{ item.description }}"
+    ip_block: "{{ item.subnet }}"
+    prefix_length: "{{ item.cidr }}"
+    region: "{{ item.region }}"
+  with_items: "{{ vutr_bare_metal_vpc2s }}"
 
 - ansible.builtin.include_tasks: present.yml
   with_items: "{{ vultr_bare_metals }}"
@@ -40,13 +40,13 @@
     name: "{{ vultr_bare_metal_ssh_key_name }}"
     state: absent
 
-# - name: cleanup vpcs
-#   vultr.cloud.vpc:
-#     description: "{{ item.description }}"
-#     region: "{{ item.region }}"
-#     state: absent
-#   with_items: "{{ vutr_bare_metal_vpcs }}"
-#   retries: 5
-#   delay: 3
-#   register: result
-#   until: result is not failed
+- name: cleanup vpc2s
+  vultr.cloud.vpc:
+    description: "{{ item.description }}"
+    region: "{{ item.region }}"
+    state: absent
+  with_items: "{{ vutr_bare_metal_vpc2s }}"
+  retries: 5
+  delay: 3
+  register: result
+  until: result is not failed
