--- a/tests/integration/targets/bare_metal/tasks/tests.yml
+++ b/tests/integration/targets/bare_metal/tasks/tests.yml
@@ -12,41 +12,41 @@
 
 - ansible.builtin.import_tasks: failures.yml
 
-- name: setup ssh key
-  vultr.cloud.ssh_key:
-    name: "{{ vultr_bare_metal_ssh_key_name }}"
-    ssh_key: "{{ vultr_bare_metal_ssh_key }}"
+# - name: setup ssh key
+#   vultr.cloud.ssh_key:
+#     name: "{{ vultr_bare_metal_ssh_key_name }}"
+#     ssh_key: "{{ vultr_bare_metal_ssh_key }}"
 
-- name: setup vpc2s
-  vultr.cloud.vpc2:
-    description: "{{ item.description }}"
-    ip_block: "{{ item.subnet }}"
-    prefix_length: "{{ item.cidr }}"
-    region: "{{ item.region }}"
-  with_items: "{{ vutr_bare_metal_vpc2s }}"
+# - name: setup vpc2s
+#   vultr.cloud.vpc2:
+#     description: "{{ item.description }}"
+#     ip_block: "{{ item.subnet }}"
+#     prefix_length: "{{ item.cidr }}"
+#     region: "{{ item.region }}"
+#   with_items: "{{ vutr_bare_metal_vpc2s }}"
 
-- ansible.builtin.include_tasks: present.yml
-  with_items: "{{ vultr_bare_metals }}"
-  loop_control:
-    loop_var: bare_metal
+# - ansible.builtin.include_tasks: present.yml
+#   with_items: "{{ vultr_bare_metals }}"
+#   loop_control:
+#     loop_var: bare_metal
 
-- ansible.builtin.include_tasks: absent.yml
-  with_items: "{{ vultr_bare_metals }}"
-  loop_control:
-    loop_var: bare_metal
+# - ansible.builtin.include_tasks: absent.yml
+#   with_items: "{{ vultr_bare_metals }}"
+#   loop_control:
+#     loop_var: bare_metal
 
-- name: cleanup ssh key
-  vultr.cloud.ssh_key:
-    name: "{{ vultr_bare_metal_ssh_key_name }}"
-    state: absent
+# - name: cleanup ssh key
+#   vultr.cloud.ssh_key:
+#     name: "{{ vultr_bare_metal_ssh_key_name }}"
+#     state: absent
 
-- name: cleanup vpc2s
-  vultr.cloud.vpc:
-    description: "{{ item.description }}"
-    region: "{{ item.region }}"
-    state: absent
-  with_items: "{{ vutr_bare_metal_vpc2s }}"
-  retries: 5
-  delay: 3
-  register: result
-  until: result is not failed
+# - name: cleanup vpc2s
+#   vultr.cloud.vpc:
+#     description: "{{ item.description }}"
+#     region: "{{ item.region }}"
+#     state: absent
+#   with_items: "{{ vutr_bare_metal_vpc2s }}"
+#   retries: 5
+#   delay: 3
+#   register: result
+#   until: result is not failed
