add bare_metal module, refactors instance (#79)

--- a/tests/integration/targets/bare_metal/tasks/failures.yml
+++ b/tests/integration/targets/bare_metal/tasks/failures.yml
@@ -1,6 +1,6 @@
 ---
 - name: test fail if missing arguments
-  vultr.cloud.instance:
+  vultr.cloud.bare_metal:
   register: result
   ignore_errors: true
 - name: verify test fail if missing arguments
@@ -10,7 +10,7 @@
       - 'result.msg == "missing required arguments: label, region"'
 
 - name: test fail if missing arguments required one of
-  vultr.cloud.instance:
+  vultr.cloud.bare_metal:
     label: my label
     plan: a plan
     region: a region
@@ -23,11 +23,11 @@
       - '"one of the following required" in result.msg'
 
 - name: test fail if ssh key not found
-  vultr.cloud.instance:
+  vultr.cloud.bare_metal:
     label: my label
     plan: a plan
     region: a region
-    os: Debian 11 x64 (bullseye)
+    os: Debian 12 x64 (bookworm)
     ssh_keys:
       - does-not-exist
   register: result
@@ -39,12 +39,12 @@
       - '"SSH key names not found: does-not-exist" in result.msg'
 
 - name: test fail if vpc not found
-  vultr.cloud.instance:
+  vultr.cloud.bare_metal:
     label: my label
     plan: a plan
     region: a region
-    os: Debian 11 x64 (bullseye)
-    vpcs:
+    os: Debian 12 x64 (bookworm)
+    vpc2s:
       - does-not-exist
   register: result
   ignore_errors: true
@@ -52,4 +52,4 @@
   ansible.builtin.assert:
     that:
       - result is failed
-      - '"VPCs (v1) not found: does-not-exist" in result.msg'
+      - '"VPCs (v2) not found: does-not-exist" in result.msg'
