--- a/tests/integration/targets/cleanup/tasks/cleanup_bare_metal.yml
+++ b/tests/integration/targets/cleanup/tasks/cleanup_bare_metal.yml
@@ -2,9 +2,9 @@
 - name: cleanup
   when: vultr_api_key
   block:
-    - name: List vpc2s
+    - name: List bare metals
       ansible.builtin.uri:
-        url: "{{ vultr_api_url }}/vpc2"
+        url: "{{ vultr_api_url }}/bare-metals"
         headers:
           Authorization: Bearer {{ vultr_api_key }}
         status_code: 200
@@ -15,14 +15,15 @@
       ansible.builtin.debug:
         var: res.json
 
-    - name: Remove all vpc2s created by this test run
+    - name: Remove all bare metals created by this test run
       ansible.builtin.uri:
-        url: "{{ vultr_api_url }}/vpc2/{{ item.id }}"
+        url: "{{ vultr_api_url }}/bare-metals/{{ item.id }}"
         method: "DELETE"
         headers:
           Authorization: Bearer {{ vultr_api_key }}
         status_code: 204
-      when: vultr_resource_prefix in item.description
-      with_items: "{{ res.json.vpcs }}"
+      when: vultr_resource_prefix in item.label
+      with_items: "{{ res.json.bare_metals }}"
       loop_control:
-        label: "{{ item.description }}"
+        label: "{{ item.label }}"
+      no_log: true
